[package]
name = "blockchain"
version = "0.1.0"
authors = ["SteÌphane DE LA TORRE <s.dlt@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.2.16"
serde = "1.0.114"
serde_derive = "1.0.114"
serde_json = "1.0.56"
sha2 = "0.9.1"
